# seam-carving-algorithm

./: Cargo.toml  readme.md
data/: .gitignore
src/: image_data.rs  lib.rs  main.rs
src/image_data/: utils.rs
