[package]
name = "seam_carving"
version = "0.1.0"
authors = ["Danny <36959138+DannyStoyanov@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^0.7", features = ["fltk-bundled"] }
image = "0.23.12"
rand = "0.8.2"